--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <title>Landing Page</title>
 </head>
 <body>
     <header>
-        <p>Header Logo</p>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+        <p id="header-logo">Header Logo</p>
+        <ul class="nav-bar">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
     </header>
+
     <section>
         <div>
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
-            <a>Sign Up</a>
+            <a href="#">Sign Up</a>
         </div>
         <img/>
     </section>
+
     <section>
         <h2>Some Random Information</h2>
         <div>
@@ -41,19 +48,22 @@
             <p>this is some subtext under an illustration or image</p>
         </div>
     </section>
+
     <section>
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>Thor, God of Thunder</p>
     </section>
+
     <section>
         <div>
             <div>
                 <h3>Call to action! It's time!</h3>
                 <p>Sign up for our product by clicking the button right over there!</p>
             </div>
-            <a>Sign Up</a>
+            <a href="#">Sign Up</a>
         </div>
     </section>
+
     <footer>
         <p>Copyright &copy; The Odin Project 2024</p>
     </footer>
