Finished main code for Hero section
Finished main code for Hero section and added a few minor punctuation changes in the html

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <li><a href="#">header link three</a></li>
         </ul>
     </header>
-    <section>
+    <section id="hero-section">
         <div>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast</p>
-            <a href="#">Sign Up</a>
+            <h1>This website is awesome!</h1>
+            <p>This website has some subtext that goes here under the main title. Its a smaller font and the color is lower contrast.</p>
+            <a href="#" class="sign-up-btn">Sign Up</a>
         </div>
         <img/>
     </section>
 
-    <section>
-        <h2>Some Random Information</h2>
+    <section id="random-info-section">
+        <h2>Some Random Information.</h2>
         <div>
             <img>
             <p>this is some subtext under an illustration or image</p>
