Started on formatting the random-information section
Formatting on random info section has started with dividing the elements into containers that would help format them easier in flexbox

--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
 
     <section id="random-info-section">
         <h2>Some Random Information.</h2>
-        <div>
-            <img>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <img>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <img>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <img>
-            <p>this is some subtext under an illustration or image</p>
+        <div id="random-info-container">
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <img>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </section>
 
